# testjam

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyjam_definitions.xmind  testjam_api.yaml  testjam_definitions.xmind
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 25e6a3f4703d_add_expires_at_to_api_tokens.py  2864d710f92c_add_archived_at_to_projects.py  2c8f888e9a1e_initial_schema.py  320b81850a90_add_allow_user_self_delete_to_settings.py  461099e5bde1_add_app_settings_singleton.py  (+43 more)
backend/scripts/: create_admin.py  dev_server.sh  healthcheck.py  purge_expired_tokens.py
backend/testjam/: database.py  main.py  realtime.py  realtime_backplane.py
backend/tests/: conftest.py  test_admin_projects.py  test_admin_user_management.py  test_auth.py  test_auth_extended.py  test_backup.py  test_bugs.py  test_case_comments.py  test_case_revisions.py  test_cases.py  test_cors_config.py  test_coverage.py  test_dashboard.py  test_datetime_contract.py  test_email_service.py  test_email_templates.py  test_environments.py  test_execution_events.py  test_execution_lock.py  test_executions.py  test_executions_emails.py  test_executions_extended.py  test_export_user_timezone.py  test_groups.py  test_health.py  test_imports.py  test_integrations_azure_devops.py  test_integrations_github.py  test_integrations_gitlab.py  test_integrations_jira.py  test_integrations_openproject.py  test_integrations_report_external.py  test_integrations_scaffold.py  test_lockout.py  test_log_flusher.py  test_logging.py  test_markdown_to_adf.py  test_markdown_to_html.py  test_members.py  test_mentions.py  (+32 more)
client/: README.md  pyproject.toml
client/testjam_client/: __init__.py  client.py  errors.py
client/tests/: conftest.py  test_archive_reconcile.py  test_auth.py  test_errors.py  test_executions.py  test_integrations.py  test_navigation.py  test_projects.py  test_suites_cases.py  test_versions.py
listener/: README.md  pyproject.toml
listener/testjam_listener/: __init__.py  client.py  git_version.py  listener.py  log.py  status.py
listener/tests/: test_git_version.py
tests/e2e/: Dockerfile  log.html  output.xml  pyproject.toml  report.html  robot.toml
(+743 files in other folders)
