[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testjam-api"
version = "0.1.0"
description = "Testjam test management platform — backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyJWT>=2.10.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.20",
    "openpyxl>=3.1.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["testjam"]

[tool.hatch.build.targets.wheel.force-include]
"testjam/templates" = "testjam/templates"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
