[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testjam-client"
version = "0.1.0"
description = "Python SDK for the Testjam REST API."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "fastapi[standard]>=0.115",
]

[tool.hatch.build.targets.wheel]
packages = ["testjam_client"]
