[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testjam-e2e"
version = "0.1.0"
description = "Robot Framework E2E tests for Testjam"
requires-python = ">=3.12"
dependencies = [
    "robotframework>=7.0",
    "requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["testjam_e2e"]
